# test_ml

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  notebooks.yml  pyproject.toml
api/: model.sav  server.py
notebooks/: environment.yml  housing_data_eda_and_model_Selection.ipynb
