[tool.poetry]
name = "test_ml"
version = "0.1.0"
description = "A microservice for ML model training and prediction"
authors = ["acquayefrank <acquayefrank@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.61.1"
requests = "^2.24.0"
sklearn = "^0.0"
scikit-learn = "^0.23.2"
pandas = "^1.1.3"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}
pytest = "^6.1.1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
